--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Just open index.html file and change API key to yours( you can get it on [coinlib.io](https://www.coinlib.io/apidocs))",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
